--- a/LZ78_Notebook.ipynb
+++ b/LZ78_Notebook.ipynb
@@ -23,6 +23,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_nodes(nodes: list):\n",
+    "    for node in nodes:\n",
+    "        print(\"[\" + str(node.number_in_dict) + \":\" + str(node.next_char) + \"]\", end=\" \")\n",
+    "    print(\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Encryption algorithm"
    ]
   },
@@ -32,11 +51,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_nodes(nodes: list):\n",
-    "    for node in nodes:\n",
-    "        print(\"[\" + str(node.number_in_dict) + \":\" + str(node.next_char) + \"]\", end=\" \")\n",
-    "    print(\"\")\n",
-    "\n",
     "def lz78_encription(data: str) -> list:\n",
     "    nodes = []\n",
     "    nodes_dict = {}\n",
@@ -63,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +85,9 @@
      "output_type": "stream",
      "text": [
       "Data: abacababacabc\n",
-      "[-1:a] [-1:b] [0:c] [0:b] [3:a] [-1:c] [3:c] \n"
+      "[-1:a] [-1:b] [0:c] [0:b] [3:a] [-1:c] [3:c] \n",
+      "Data: abacababwrwwwwtsacabc\n",
+      "[-1:a] [-1:b] [0:c] [0:b] [3:w] [-1:r] [-1:w] [6:w] [6:t] [-1:s] [2:a] [1:c] \n"
      ]
     }
    ],
