feat: Decription algorithm has been added with example

--- a/LZ78_Notebook.ipynb
+++ b/LZ78_Notebook.ipynb
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Examples"
+    "### Examples for encription"
    ]
   },
   {
@@ -98,15 +98,66 @@
     "\n",
     "data = \"abacababwrwwwwtsacabc\"\n",
     "print(\"Data:\", data)\n",
-    "print_nodes(lz78_encription(data))"
+    "print_nodes(lz78_encription(data))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decription algorithm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def lz78_decription(nodes: list) -> str:\n",
+    "    result = \"\"\n",
+    "    nodes_dict = {}\n",
+    "    for node_index in range(len(nodes)):\n",
+    "        if nodes[node_index].number_in_dict == -1:\n",
+    "            nodes_dict[node_index] = nodes[node_index].next_char\n",
+    "        else:\n",
+    "            nodes_dict[node_index] = nodes_dict[nodes[node_index].number_in_dict] + nodes[node_index].next_char\n",
+    "        result += nodes_dict[node_index]\n",
+    "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Examples for full algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data: abacababacabc\n",
+      "[-1:a] [-1:b] [0:c] [0:b] [3:a] [-1:c] [3:c] \n",
+      "Decripted data: abacababacabc\n",
+      "Strings are equals\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = \"abacababacabc\"\n",
+    "print(\"Data:\", data)\n",
+    "nodes = lz78_encription(data)\n",
+    "print_nodes(nodes)\n",
+    "decripted_data = lz78_decription(nodes)\n",
+    "print(\"Decripted data:\", decripted_data)\n",
+    "print(\"Strings are equals\" if data == decripted_data else \"Strings aren't equals\")\n"
+   ]
   },
   {
    "cell_type": "code",
