fix: Fix has been applied, random tests have been added

--- a/LZ78_Notebook.ipynb
+++ b/LZ78_Notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +65,9 @@
     "                break\n",
     "            else:\n",
     "                found_prefix_position = nodes_dict[data[current_pos : current_pos + prefix_size]]\n",
+    "        else:\n",
+    "            nodes.append(Node(found_prefix_position, \"\"))\n",
+    "            current_pos += prefix_size\n",
     "    return nodes\n"
    ]
   },
@@ -77,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,28 +138,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data: abacababacabc\n",
-      "[-1:a] [-1:b] [0:c] [0:b] [3:a] [-1:c] [3:c] \n",
-      "Decripted data: abacababacabc\n",
+      "Data: btb\n",
+      "***\n",
+      "[-1:b] [-1:t] [0:] \n",
+      "Decripted data: btb\n",
       "Strings are equals\n"
      ]
     }
    ],
    "source": [
-    "data = \"abacababacabc\"\n",
+    "data = \"btb\"\n",
     "print(\"Data:\", data)\n",
     "nodes = lz78_encription(data)\n",
+    "print(\"***\")\n",
     "print_nodes(nodes)\n",
     "decripted_data = lz78_decription(nodes)\n",
     "print(\"Decripted data:\", decripted_data)\n",
-    "print(\"Strings are equals\" if data == decripted_data else \"Strings aren't equals\")\n"
+    "print(\"Strings are equals\" if data == decripted_data else \"Strings aren't equals\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data: j\n",
+      "Data: a\n",
+      "Data: e\n",
+      "Data: z\n",
+      "Data: k\n",
+      "Data: w\n",
+      "Data: f\n",
+      "Data: a\n",
+      "Data: b\n",
+      "Data: g\n",
+      "OK\n",
+      "Data: np\n",
+      "Data: fr\n",
+      "Data: lv\n",
+      "Data: cm\n",
+      "Data: ut\n",
+      "Data: hy\n",
+      "Data: ck\n",
+      "Data: vn\n",
+      "Data: ke\n",
+      "Data: ln\n",
+      "OK\n",
+      "Data: txh\n",
+      "Data: uoa\n",
+      "Data: ioe\n",
+      "Data: qso\n",
+      "Data: fra\n",
+      "Data: yko\n",
+      "Data: cro\n",
+      "Data: uui\n",
+      "Data: emf\n",
+      "Data: skz\n",
+      "OK\n",
+      "Data: vsyf\n",
+      "Data: ftvo\n",
+      "Data: tspc\n",
+      "Data: kbbu\n",
+      "Data: gvup\n",
+      "Data: rpbe\n",
+      "Data: jjsh\n",
+      "Data: tmpj\n",
+      "Data: srxr\n",
+      "Data: vlnq\n",
+      "OK\n",
+      "Data: zetht\n",
+      "Data: nncje\n",
+      "Data: pfsbc\n",
+      "Data: lkovq\n",
+      "Data: lubmy\n",
+      "Data: tciud\n",
+      "Data: abigd\n",
+      "Data: uqrtv\n",
+      "Data: bygzw\n",
+      "Data: hfsly\n",
+      "OK\n",
+      "Data: fntary\n",
+      "Data: hwnugf\n",
+      "Data: aacukh\n",
+      "Data: sccljp\n",
+      "Data: knbfyv\n",
+      "Data: ifsoge\n",
+      "Data: jlncrj\n",
+      "Data: yfsrek\n",
+      "Data: bxcpre\n",
+      "Data: shxdpq\n",
+      "OK\n",
+      "Data: dfbcjjs\n",
+      "Data: ufkedwm\n",
+      "Data: qzjxbxd\n",
+      "Data: cvwclzp\n",
+      "Data: lmjmglq\n",
+      "Data: jsvnvtu\n",
+      "Data: ufwxqxe\n",
+      "Data: egfnkgd\n",
+      "Data: couedyx\n",
+      "Data: anbpejy\n",
+      "OK\n",
+      "Data: vptqybeu\n",
+      "Data: ulkoedce\n",
+      "Data: uxwmpybx\n",
+      "Data: zswtsrdy\n",
+      "Data: dmgeozrr\n",
+      "Data: qlwmdlwj\n",
+      "Data: qkdvvnjn\n",
+      "Data: scjdqdag\n",
+      "Data: opewsonp\n",
+      "Data: gxzmkbpi\n",
+      "OK\n",
+      "Data: ezwzfnvxr\n",
+      "Data: dukylykjk\n",
+      "Data: wsjtraeiy\n",
+      "Data: ifwognztp\n",
+      "Data: xwevmfccw\n",
+      "Data: csjxlcxmy\n",
+      "Data: svwqveiev\n",
+      "Data: gxntfjbth\n",
+      "Data: cqgomwohe\n",
+      "Data: pnzybtylv\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import string\n",
+    "\n",
+    "def random_string(stringLength):\n",
+    "    letters = string.ascii_lowercase\n",
+    "    return ''.join(random.choice(letters) for i in range(stringLength))\n",
+    "\n",
+    "for length in range(1, 10):\n",
+    "    for case_number in range(10):\n",
+    "        data = random_string(length)\n",
+    "        print(\"Data:\", data)\n",
+    "        nodes = lz78_encription(data)\n",
+    "        decripted_data = lz78_decription(nodes)\n",
+    "        if data != decripted_data:\n",
+    "            print(\"Strings aren't equals\")\n",
+    "            break\n",
+    "    else:\n",
+    "        print(\"OK\")\n"
    ]
   },
   {
