chore: Functions have been renamed: "crypt" -> "compress"

--- a/LZ78_Notebook.ipynb
+++ b/LZ78_Notebook.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Encryption algorithm"
+    "### Compression algorithm"
    ]
   },
   {
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def lz78_encription(data: str) -> list:\n",
+    "def lz78_compression(data: str) -> list:\n",
     "    nodes = []\n",
     "    nodes_dict = {}\n",
     "    current_pos = 0\n",
@@ -97,18 +97,18 @@
    "source": [
     "data = \"abacababacabc\"\n",
     "print(\"Data:\", data)\n",
-    "print_nodes(lz78_encription(data))\n",
+    "print_nodes(lz78_compression(data))\n",
     "\n",
     "data = \"abacababwrwwwwtsacabc\"\n",
     "print(\"Data:\", data)\n",
-    "print_nodes(lz78_encription(data))\n"
+    "print_nodes(lz78_compression(data))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Decription algorithm"
+    "### Decompression algorithm"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def lz78_decription(nodes: list) -> str:\n",
+    "def lz78_decompression(nodes: list) -> str:\n",
     "    result = \"\"\n",
     "    nodes_dict = {}\n",
     "    for node_index in range(len(nodes)):\n",
@@ -154,14 +154,14 @@
     }
    ],
    "source": [
-    "data = \"btb\"\n",
+    "data = \"btbawrawtatww\"\n",
     "print(\"Data:\", data)\n",
-    "nodes = lz78_encription(data)\n",
+    "nodes = lz78_compression(data)\n",
     "print(\"***\")\n",
     "print_nodes(nodes)\n",
-    "decripted_data = lz78_decription(nodes)\n",
-    "print(\"Decripted data:\", decripted_data)\n",
-    "print(\"Strings are equals\" if data == decripted_data else \"Strings aren't equals\")"
+    "decompressed_data = lz78_decompression(nodes)\n",
+    "print(\"Decompressed_data data:\", decompressed_data)\n",
+    "print(\"Strings are equals\" if data == decompressed_data else \"Strings aren't equals\")"
    ]
   },
   {
@@ -294,9 +294,9 @@
     "    for case_number in range(10):\n",
     "        data = random_string(length)\n",
     "        print(\"Data:\", data)\n",
-    "        nodes = lz78_encription(data)\n",
-    "        decripted_data = lz78_decription(nodes)\n",
-    "        if data != decripted_data:\n",
+    "        nodes = lz78_compression(data)\n",
+    "        decompressed_data = lz78_decompression(nodes)\n",
+    "        if data != decompressed_data:\n",
     "            print(\"Strings aren't equals\")\n",
     "            break\n",
     "    else:\n",
